jobs/affinity.yml
#First we create the labels for the nodes using the commands below
# ----> kubectl get nodes
# Once the nodes are got we label them one by one using below statements with the label affinity1=one
# ----> kubectl label node ip-172-31-35-76.ec2.internal affinity1=one
# ----> kubectl label node ip-172-31-85-48.ec2.internal affinity1=one
#  ----> kubectl label node ip-172-31-93-29.ec2.internal affinity1=one
#then we try both required scheduling and preferred scheduling the pods
# requiredDuringSchedulingIgnoredDuringExecution ----> only schedules the pod if there is a label that matches the pod label.
# preferredDuringSchedulingIgnoredDuringExecution ----> tries to schedule in the matched label node, however if not available it still can schedule in any other nodes.
---
apiVersion: v1
kind: Pod
metadata:
  name: node-with-affinity
spec:
  containers:
    - name: node-with-affinity
      image: nginx:1.14.2
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: affinity1
                operator: In
                values:
                  - "two"
#will not schedule at all
---
apiVersion: v1
kind: Pod
metadata:
  name: node-without-affinity
spec:
  containers:
    - name: node-without-affinity
      image: nginx:1.14.2
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - preference:
            matchExpressions:
              - key: affinity1
                operator: In
                values:
                  - "two"
# will schedule
